syntax = "proto3";
package scanner;

// Empty is for gRPCs that take no arguments, currently only GetInfo.
message Empty {}

service Scanner {
    // Get information about the scanner service.
    rpc GetInfo (Empty) returns (InfoReply);

    rpc ClearResults(ClearResultsRequest) returns (Empty);

    rpc DeleteKeys(DeleteKeysRequest) returns (Empty);
}

// A response to a GetInfo call.
message InfoReply {
    // The minimum sapling height allowed.
    uint32 min_sapling_birthday_height = 1;
}

message ClearResultsRequest {
    repeated string keys = 1;
}

message DeleteKeysRequest {
    repeated string keys = 1;
}